Feat: Add main page

--- a/index.html
+++ b/index.html
@@ -2,37 +2,40 @@
 <html lang="en">
 
 <head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7654513343845307"
-     crossorigin="anonymous"></script>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-B7YRKB60FX"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7654513343845307"
+        crossorigin="anonymous"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B7YRKB60FX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-  gtag('config', 'G-B7YRKB60FX');
-</script>
+        gtag('config', 'G-B7YRKB60FX');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RyVision</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <canvas id="overlay"></canvas>
-    <div id="background"></div>
-    <div id="debug-panel">
-        <div id="game-info">
+    <div id="content">
+        <header>
+            <h1>RyVision</h1>
+            <p>
+                travel through space-time dimensions
+            </p>
+        </header>
+        <div class="grid">
+            <a href="weekly/" style="background-image: url('/res/Grect.jpg');">
+                <span class="label">VOID</span>
+            </a>
         </div>
-        <div id="option">
-        </div>
+        <footer>
+        </footer>
     </div>
-    <div id="bot-panel">
-    </div>
-    <script type="module" src="./js/option.js"></script>
-    <script type="module" src="./js/rect.js"></script>
-    <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
