Add: about page + web meta data

--- a/daily/index.html
+++ b/daily/index.html
@@ -15,7 +15,8 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RyVision</title>
+    <title>Daily RyVision</title>
+    <meta name="description" content="Daily AI-generated webgame.">
     <link rel="stylesheet" href="./style.css">
 </head>
 
