--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RyVision</title>
+    <meta name="description" content="Daily AI-generated webgame.">
     <link rel="stylesheet" href="./style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -25,15 +26,26 @@
         <header>
             <h1>RyVision</h1>
             <p>
-                travel through space-time dimensions
+                Daily AI-generated webgame
             </p>
         </header>
         <div class="grid">
-            <a href="weekly/" style="background-image: url('/res/Grect.jpg');">
+            <a class="cell" href="daily/" style="background-image: url('/res/Grect.jpg');">
                 <span class="label">VOID</span>
             </a>
         </div>
         <footer>
+            <h3>Links :</h3>
+            <nav>
+                <a href="https://x.com/AgenticSys" target="_blank">
+                    <i class="fa-brands fa-square-x-twitter"></i>
+                    X
+                </a>
+                <a href="/about/" target="">
+                    <i class="fa-solid fa-circle-info"></i>
+                    About
+                </a>
+            </nav>
         </footer>
     </div>
 </body>
