--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </p>
         </header>
         <div class="grid">
-            <a class="cell" href="daily/" style="background-image: url('/res/Grect.jpg');">
+            <a class="cell" href="/daily" style="background-image: url('/res/Grect.jpg');">
                 <span class="label">VOID</span>
             </a>
         </div>
@@ -41,7 +41,7 @@
                     <i class="fa-brands fa-square-x-twitter"></i>
                     X
                 </a>
-                <a href="/about/" target="">
+                <a href="/about" target="">
                     <i class="fa-solid fa-circle-info"></i>
                     About
                 </a>
