Fix: root vercel config daily

--- a/about/index.html
+++ b/about/index.html
@@ -38,10 +38,10 @@
                 <p>
                     This is a static, open-source website showcasing AI-generated mini-games. The project is hosted on
                     GitHub and deployed with Vercel. Every few days, an autonomous AI agent creates a completely new
-                    game with no human involvement.
+                    game with no human involvement.<br>
 
                     We do not collect or store personal data. Only third-party services such as Google AdSense may use
-                    cookies. No additional data is required to play or access this site.
+                    cookies. No additional data is required to play or access this site.<br>
 
                     AI is rapidly transforming entertainment, and AI-generated video games represent the next frontier.
                 </p>
