Fix: daily.html stylesheet path

--- a/daily/index.html
+++ b/daily/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily RyVision</title>
     <meta name="description" content="Daily AI-generated webgame.">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/daily/style.css">
 </head>
 
 <body>
