Fix: move js path in daily

--- a/daily/index.html
+++ b/daily/index.html
@@ -31,9 +31,9 @@
     </div>
     <div id="bot-panel">
     </div>
-    <script type="module" src="/js/option.js"></script>
-    <script type="module" src="/js/rect.js"></script>
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="/daily/js/option.js"></script>
+    <script type="module" src="/daily/js/rect.js"></script>
+    <script type="module" src="/daily/js/main.js"></script>
 </body>
 
 </html>
