Feat: Total refactoring of file system and build

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RyVision</title>
     <meta name="description" content="Daily AI-generated webgame.">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/src/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+    <link rel="prefetch" href="/daily.html">
+    <link rel="prefetch" href="/about.html">
 </head>
 
 <body>
@@ -30,7 +32,7 @@
             </p>
         </header>
         <div class="grid">
-            <a class="cell" href="/daily" style="background-image: url('/res/Grect.jpg');">
+            <a class="cell" href="/daily.html" style="background-image: url('res/Grect.jpg');">
                 <span class="label">VOID</span>
             </a>
         </div>
@@ -41,7 +43,7 @@
                     <i class="fa-brands fa-square-x-twitter"></i>
                     X
                 </a>
-                <a href="/about" target="">
+                <a href="/about.html" target="">
                     <i class="fa-solid fa-circle-info"></i>
                     About
                 </a>
