added more text

--- a/about.html
+++ b/about.html
@@ -55,6 +55,13 @@
                     </a>
                 </p>
             </div>
+            <div>
+                <h3>Scoring System</h3>
+                <p>
+                    The highscore board shows the top 10 scores for the current game. When the game is reset, the board
+                    is cleared and starts fresh with the new game.
+                </p>
+            </div>
         </div>
         <div>
         </div>
