Feat: score system

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             <a class="cell" href="/daily.html" style="background-image: url('res/Grect.jpg');">
                 <span class="label">VOID</span>
             </a>
+            <div id="scoreboard">
+            </div>
         </div>
         <footer>
             <h3>Links :</h3>
@@ -50,6 +52,7 @@
             </nav>
         </footer>
     </div>
+    <script type="module" src="/src/js/highscore.js"></script>
 </body>
 
 </html>
