--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <header>
             <h1>RyVision</h1>
             <nav>
-                <a href="/index.html" target="">
+                <a href="/" target="">
                     <i class="fa-solid fa-arrow-left"></i>
                     Back
                 </a>
