--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </p>
         </header>
         <div class="grid">
-            <a class="cell" href="/daily.html" style="background-image: url('res/Grect.jpg');">
+            <a class="cell" href="/daily" style="background-image: url('res/Grect.jpg');">
                 <span class="label">VOID</span>
             </a>
             <div id="scoreboard">
@@ -45,7 +45,7 @@
                     <i class="fa-brands fa-square-x-twitter"></i>
                     X
                 </a>
-                <a href="/about.html" target="">
+                <a href="/about" target="">
                     <i class="fa-solid fa-circle-info"></i>
                     About
                 </a>
