Feat: GameDev page

--- a/about.html
+++ b/about.html
@@ -25,10 +25,25 @@
     <div id="content">
         <header>
             <h1>RyVision</h1>
+            <p>
+                Daily AI-generated webgame
+            </p>
             <nav>
                 <a href="/" target="">
-                    <i class="fa-solid fa-arrow-left"></i>
-                    Back
+                    <i class="fa-solid fa-house"></i>
+                    home
+                </a>
+                <a href="/about" target="">
+                    <i class="fa-solid fa-circle-info"></i>
+                    About
+                </a>
+                <a href="/gamedev" target="">
+                    <i class="fa-solid fa-gamepad"></i>
+                    GameDev
+                </a>
+                <a href="https://x.com/AgenticSys" target="_blank">
+                    <i class="fa-brands fa-square-x-twitter"></i>
+                    X
                 </a>
             </nav>
         </header>
@@ -36,30 +51,66 @@
             <div>
                 <h3>About This Website</h3>
                 <p>
-                    This is a static, open-source website showcasing AI-generated mini-games. The project is hosted on
-                    GitHub and deployed with Vercel. Every few days, an autonomous AI agent creates a completely new
-                    game with no human involvement.<br>
-
-                    We do not collect or store personal data. Only third-party services such as Google AdSense may use
-                    cookies. No additional data is required to play or access this site.<br>
-
-                    AI is rapidly transforming entertainment, and AI-generated video games represent the next frontier.
+                    RyVision is a static, open-source website hosted on GitHub at thatonegame.xyz. It acts as a
+                    prototype to test how AI can handle game creation without any human input. Scripts and an AI agent
+                    run the process, building and deploying new games on set schedules. Every two days, the AI creates a
+                    new mini-game from scratch. These games are lightweight and load quickly on any device. Players try
+                    to get the highest score possible, which appears on a global leaderboard. When the next mini-game
+                    starts, the old one gets replaced entirely, no access to previous games remains, and all scores from
+                    the last cycle are deleted. The site also includes a larger game that receives updates each week,
+                    growing with new features over time. This setup demonstrates AI's ability to manage tasks like
+                    writing code, creating visuals, and updating the site.<br><br>
+                    It demonstrates a fully automated system where scripts and AI handle every step of game
+                    creation, highlighting how artificial intelligence can streamline development while maintaining
+                    creativity and variety. The entire codebase is open-source on GitHub.
                 </p>
             </div>
             <div>
-                <h3>Contact here</h3>
+                <h3>Scoreboard System</h3>
                 <p>
-                    <a href="https://x.com/AgenticSys" target="_blank">
-                        <i class="fa-brands fa-square-x-twitter"></i>
-                        here
-                    </a>
+                    The mini-game includes a global scoreboard that displays the top 10 scores. Players can appear
+                    multiple times, and their scores exist only until the next game is generated. Previous scores are
+                    published on X before being erased. This approach maintains a competitive but temporary leaderboard,
+                    keeping each game cycle fresh and encouraging repeated engagement.
                 </p>
             </div>
             <div>
-                <h3>Scoring System</h3>
+                <h3>Game Dev</h3>
                 <p>
-                    The highscore board shows the top 10 scores for the current game. When the game is reset, the board
-                    is cleared and starts fresh with the new game.
+                    The RPG represents a longer-term AI-driven development project. Each week, the AI adds new content,
+                    mechanics, or systems, slowly building a more functional and immersive game world. The mini-game is
+                    simpler, but its completely autonomous creation process showcases the same principles of automation
+                    applied on a smaller scale. Together, these projects provide insight into how AI can be used for
+                    both rapid, lightweight content generation and slower, more complex game development.
+                </p>
+            </div>
+            <div>
+                <h3>Automated System</h3>
+                <p>
+                    RyVision leverages automation to create AI-generated mini-games with minimal human input. This
+                    streamlines development, cuts costs, and delivers fresh games every 2 days. Automation ensures
+                    consistent quality, rapid deployment, and scalability, showcasing AI’s potential to revolutionize
+                    entertainment. By minimizing manual effort, we focus on innovation, setting a new standard for
+                    efficient, creative game design.
+                </p>
+            </div>
+            <div>
+                <h3>Privacy and Data Policy</h3>
+                <p>
+                    RyVision collects no personal data and stores none beyond temporary scoreboard scores entries,
+                    players username and score, which are erased when a new game is generated. The only cookies
+                    used may come from Google services for analytics or ads, as outlined in their policies. No
+                    other data is collected or stored, ensuring minimal privacy impact.
+                </p>
+            </div>
+            <div>
+                <h3>Contact</h3>
+                <p>
+                <p>Contact us on</p>
+                <a href="https://x.com/AgenticSys" target="_blank">
+                    <i class="fa-brands fa-square-x-twitter"></i>
+                    here
+                </a>
                 </p>
             </div>
         </div>
