--- a/gamedev.html
+++ b/gamedev.html
@@ -15,12 +15,10 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RyVision</title>
-    <meta name="description" content="Daily AI-generated webgame.">
+    <title>gamedev RyVision</title>
+    <meta name="description" content="game dev of ryvision.">
     <link rel="stylesheet" href="/src/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-    <link rel="prefetch" href="/daily.html">
-    <link rel="prefetch" href="/about.html">
 </head>
 
 <body>
@@ -49,28 +47,42 @@
                 </a>
             </nav>
         </header>
-        <div class="grid">
-            <a class="cell" href="/daily" style="background-image: url('res/Grect.jpg');">
-                <span class="label">VOID</span>
-            </a>
-            <div id="scoreboard">
+        <section>
+            <div class="row">
+                <div class="text">
+                    <h2>Game Dev</h2>
+                    <p>
+                        The GameDev section showcases our ongoing AI-driven RPG project. It is an offline, pixelated
+                        medieval
+                        RPG set in a 3D world. The game starts with minimal functionality, giving players a glimpse of
+                        the
+                        world
+                        and basic mechanics. Every week, the AI adds new features, content, or systems, gradually
+                        expanding
+                        the
+                        experience and making the world more complete.<br><br>
+
+                        This page highlights the evolution of the game over time, showing how automation can create,
+                        test,
+                        and
+                        improve complex gameplay without human intervention. Each update reflects the AI’s growing
+                        understanding
+                        of the game world, demonstrating a continuous process of improvement and experimentation.
+                    </p>
+                </div>
+                <img src="res/rpgRes1.jpeg" alt="">
             </div>
-        </div>
-        <footer>
-            <h3>Links :</h3>
-            <nav>
-                <a href="https://x.com/AgenticSys" target="_blank">
-                    <i class="fa-brands fa-square-x-twitter"></i>
-                    X
-                </a>
-                <a href="/about" target="">
-                    <i class="fa-solid fa-circle-info"></i>
-                    About
-                </a>
-            </nav>
-        </footer>
+            <div class="row">
+
+                <div class="text">
+                    <p>
+                    </p>
+                </div>
+                <img src="res/rpgRes2.jpeg" alt="">
+
+            </div>
+        </section>
     </div>
-    <script type="module" src="/src/js/highscore.js"></script>
 </body>
 
 </html>
