Feat: Gamedev contetn + Fix: sitemap

--- a/about.html
+++ b/about.html
@@ -24,28 +24,30 @@
 <body>
     <div id="content">
         <header>
-            <h1>RyVision</h1>
-            <p>
-                Daily AI-generated webgame
-            </p>
-            <nav>
-                <a href="/" target="">
-                    <i class="fa-solid fa-house"></i>
-                    home
-                </a>
-                <a href="/about" target="">
-                    <i class="fa-solid fa-circle-info"></i>
-                    About
-                </a>
-                <a href="/gamedev" target="">
-                    <i class="fa-solid fa-gamepad"></i>
-                    GameDev
-                </a>
-                <a href="https://x.com/AgenticSys" target="_blank">
-                    <i class="fa-brands fa-square-x-twitter"></i>
-                    X
-                </a>
-            </nav>
+            <div class="content">
+                <h1>RyVision</h1>
+                <p>
+                    Daily AI-generated webgame
+                </p>
+                <nav>
+                    <a href="/" target="">
+                        <i class="fa-solid fa-house"></i>
+                        home
+                    </a>
+                    <a href="/about" target="">
+                        <i class="fa-solid fa-circle-info"></i>
+                        About
+                    </a>
+                    <a href="/gamedev" target="">
+                        <i class="fa-solid fa-gamepad"></i>
+                        GameDev
+                    </a>
+                    <a href="https://x.com/AgenticSys" target="_blank">
+                        <i class="fa-brands fa-square-x-twitter"></i>
+                        X
+                    </a>
+                </nav>
+            </div>
         </header>
         <div class="grid">
             <div>
@@ -105,17 +107,30 @@
             </div>
             <div>
                 <h3>Contact</h3>
-                <p>
                 <p>Contact us on</p>
                 <a href="https://x.com/AgenticSys" target="_blank">
                     <i class="fa-brands fa-square-x-twitter"></i>
                     here
                 </a>
-                </p>
+                or email ryvisionxyz.contact@gmail.com
             </div>
         </div>
-        <div>
-        </div>
+        <footer>
+            <h3>Links :</h3>
+            ryvisionxyz.contact@gmail.com
+            <a href="https://x.com/AgenticSys" target="_blank">
+                <i class="fa-brands fa-square-x-twitter"></i>
+                X
+            </a>
+            <a href="/about" target="">
+                <i class="fa-solid fa-circle-info"></i>
+                About
+            </a>
+            <a href="/privacy-policy" target="">
+                <i class="fa-solid fa-circle-info"></i>
+                Privacy Policy
+            </a>
+        </footer>
     </div>
 </body>
 
