--- a/index.html
+++ b/index.html
@@ -21,53 +21,69 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link rel="prefetch" href="/daily.html">
     <link rel="prefetch" href="/about.html">
+    <link rel="icon" href="res/RyVision.ico">
 </head>
 
 <body>
     <div id="content">
         <header>
-            <h1>RyVision</h1>
-            <p>
-                Daily AI-generated webgame
-            </p>
-            <nav>
-                <a href="/" target="">
-                    <i class="fa-solid fa-house"></i>
-                    home
-                </a>
-                <a href="/about" target="">
-                    <i class="fa-solid fa-circle-info"></i>
-                    About
-                </a>
-                <a href="/gamedev" target="">
-                    <i class="fa-solid fa-gamepad"></i>
-                    GameDev
-                </a>
-                <a href="https://x.com/AgenticSys" target="_blank">
-                    <i class="fa-brands fa-square-x-twitter"></i>
-                    X
-                </a>
-            </nav>
+            <div class="content">
+                <h1>RyVision</h1>
+                <p>
+                    Daily AI-generated webgame
+                </p>
+                <nav>
+                    <a href="/" target="">
+                        <i class="fa-solid fa-house"></i>
+                        home
+                    </a>
+                    <a href="/about" target="">
+                        <i class="fa-solid fa-circle-info"></i>
+                        About
+                    </a>
+                    <a href="/gamedev" target="">
+                        <i class="fa-solid fa-gamepad"></i>
+                        GameDev
+                    </a>
+                    <a href="https://x.com/AgenticSys" target="_blank">
+                        <i class="fa-brands fa-square-x-twitter"></i>
+                        X
+                    </a>
+                </nav>
+            </div>
         </header>
+        <div style="display: flex;flex-direction: column;align-items: center;">
+            <h3>Fully autonomous games that evolve and reset</h3>
+            <h3>Select a game and begin</h3>
+        </div>
         <div class="grid">
             <a class="cell" href="/daily" style="background-image: url('res/Grect.jpg');">
-                <span class="label">VOID</span>
+                <span class="label">VOID<br>Resets every 2 days</span>
             </a>
             <div id="scoreboard">
+            </div>
+            <a class="cell" href="" style="background-image: url('res/rpgRes1.jpeg');">
+                <span class="label">Swords & Shadows<br>Update weekly</span>
+            </a>
+            <div>
+                <p></p>
             </div>
         </div>
         <footer>
             <h3>Links :</h3>
-            <nav>
-                <a href="https://x.com/AgenticSys" target="_blank">
-                    <i class="fa-brands fa-square-x-twitter"></i>
-                    X
-                </a>
-                <a href="/about" target="">
-                    <i class="fa-solid fa-circle-info"></i>
-                    About
-                </a>
-            </nav>
+            ryvisionxyz.contact@gmail.com
+            <a href="https://x.com/AgenticSys" target="_blank">
+                <i class="fa-brands fa-square-x-twitter"></i>
+                X
+            </a>
+            <a href="/about" target="">
+                <i class="fa-solid fa-circle-info"></i>
+                About
+            </a>
+            <a href="/privacy-policy" target="">
+                <i class="fa-solid fa-circle-info"></i>
+                Privacy Policy
+            </a>
         </footer>
     </div>
     <script type="module" src="/src/js/highscore.js"></script>
