--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link rel="prefetch" href="/daily.html">
     <link rel="prefetch" href="/about.html">
-    <link rel="icon" href="res/RyVision.ico">
+    <link rel="icon" href="res/RyVision.ico" type="image/x-icon">
 </head>
 
 <body>
