Fix: desc and titles

--- a/gamedev.html
+++ b/gamedev.html
@@ -15,7 +15,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gamedev RyVision</title>
+    <title>Gamedev RyVision</title>
     <meta name="description" content="game dev of ryvision.">
     <link rel="stylesheet" href="/src/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
