--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,7 +13,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>privacy policy RyVision</title>
+    <title>Privacy Policy RyVision</title>
     <meta name="description" content="privacy policy of ryvision.">
     <link rel="stylesheet" href="/src/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
