--- a/daily.html
+++ b/daily.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily RyVision</title>
-    <meta name="description" content="Daily AI-generated webgame.">
+    <meta name="description" content="Automated game resets every 48h">
     <link rel="stylesheet" href="/src/css/daily-style.css">
 </head>
 
