Fix: page canonical link

--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
     <meta name="description" content="About this static and open source website for AI entertainment.">
     <link rel="stylesheet" href="/src/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+    <link rel="canonical" href="https://www.thatonegame.xyz/about">
 </head>
 
 <body>
