--- a/daily.html
+++ b/daily.html
@@ -15,6 +15,7 @@
     <title>Daily RyVision</title>
     <meta name="description" content="Automated game resets every 48h">
     <link rel="stylesheet" href="/src/css/daily-style.css">
+    <link rel="canonical" href="https://www.thatonegame.xyz/daily">
 </head>
 
 <body>
