--- a/gamedev.html
+++ b/gamedev.html
@@ -19,6 +19,7 @@
     <meta name="description" content="game dev of ryvision.">
     <link rel="stylesheet" href="/src/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+    <link rel="canonical" href="https://www.thatonegame.xyz/gamedev">
 </head>
 
 <body>
