--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link rel="prefetch" href="/daily.html">
     <link rel="prefetch" href="/about.html">
+    <link rel="canonical" href="https://www.thatonegame.xyz/">
 </head>
 
 <body>
