--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,6 +17,7 @@
     <meta name="description" content="privacy policy of ryvision.">
     <link rel="stylesheet" href="/src/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+    <link rel="canonical" href="https://www.thatonegame.xyz/privacy-policy">
 </head>
 
 <body>
